# CryptoArtDAO.github.io

./: .gitignore  3rdpartylicenses.txt  404.html  Cargo.toml  README.md  angular.json  index.html  karma.conf.js  main.1878d6404d785ebe5ee8.js  main.2c40fe5cff9ad37cb9dc.js  main.4af66e16afb7bbc6ee50.js  main.7ff2330fe754ee567fd7.js  main.8b631f8417378d95ab17.js  main.9d481abd6a30c6a73146.js  main.9dc114b4e7eb535a68e0.js  main.b25a8b8fd4fa1c956baf.js  main.bc7bbf0682fc1b4d13b0.js  main.c4d4e25467c7e0cce9f3.js  main.c7440c9783d661fc36bb.js  main.ce899386e379dd3a9955.js  main.ed44fe706bba8fb09fc5.js  manifest.webmanifest  ngsw.json  package.json  polyfills.a3cd28d7a8eaefe20f64.js  runtime.e4724f317e8834691951.js  styles.91264a8401b09b703329.css  tsconfig.json
.cargo/: config.toml
.github/workflows/: contract.yml
src/: config.ts  index.html  polyfills.ts
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/service/: wallet.service.ts
src/contract/: build.sh
src/contract/society/: Cargo.toml  society.rs  society_simulator.rs
